--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,9 @@
 [package]
 name = "secure-squads"
+description = "A cli for safe interactions with squads-v4"
+homepage="https://github.com/mubarizkyc/secure-squads"
+repository ="https://github.com/mubarizkyc/secure-squads"
+license-file = "LICENSE"
 version = "0.1.0"
 edition = "2024"
 
