--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "secure-squads"
+readme = "README.md"
 description = "A cli for safe interactions with squads-v4"
 homepage="https://github.com/mubarizkyc/secure-squads"
 repository ="https://github.com/mubarizkyc/secure-squads"
-license-file = "LICENSE"
-version = "0.1.0"
+license-file = "Apache-2.0"
+version = "0.1.1"
 edition = "2024"
 
 [dependencies]
