--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ readme = "README.md"
 description = "A cli for safe interactions with squads-v4"
 homepage="https://github.com/mubarizkyc/secure-squads"
 repository ="https://github.com/mubarizkyc/secure-squads"
-license-file = "Apache-2.0"
+license-file = "LICENSE"
 version = "0.1.1"
 edition = "2024"
 
