--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ borsh = "1.5.7"
 anchor-lang = "0.31.1"
 serde_json = "1.0.140"
 bincode = "2.0.1"
+hex = "0.4.3"
 
 [[bin]]
 name = "secure-squads"
